tests/parsing/smtlib/poly/errors/018_sorted_var_list_bad_sorted_var_2.psmt2
(set-logic ALL)
(assert (forall (as) true))
